# Labs_2_kurs

FA/LR_1/: 1.c  3.c
FA/LR_1/1/: 1.c
FA/LR_1/2/: 2.c
FA/LR_1/3/: 3.c
FA/LR_1/3/include/: checkUnique.h  findRoot.h  isSidesTriangle.h
FA/LR_1/3/src/: checkUnique.c  findRoot.c  isSidesTriangle.c
FA/LR_1/4/: 4.c
FA/LR_1/4 (no)/: 4.c
FA/LR_1/5/: 1.txt  5.c  out_1.txt
FA/LR_1/5/include/: createOutputPath.h  flagFunctions.h
FA/LR_1/5/src/: createOutputPath.c  flagFunctions.c
FA/LR_1/6/: 6.c
FA/LR_1/7/: 1.txt  2.txt  7.c
FA/LR_1/7/include/: switchSystem.h
FA/LR_1/7/src/: switchSystem.c
FA/LR_1/8/: 8.c
FA/LR_2/1/: 1.c  main.c
FA/LR_2/2/: 2.c  main.c
FA/LR_2/3/: main.c
FA/LR_2/3/include/: functions.h
FA/LR_2/3/src/: functions.c
FA/LR_2/4/: main.c
FA/LR_2/4/files/: 1.txt
FA/LR_2/4/include/: functions.h
FA/LR_2/4/src/: functions.c
FA/LR_2/5/: 1.txt  2.txt  main.c
FA/LR_2/6/: 1.txt  2.txt  main.c
FA/LR_2/6/include/: functions.h
FA/LR_2/6/src/: functions.c
FA/LR_3/1/: main.c
FA/LR_3/1/include/: arithmetic.h
FA/LR_3/1/src/: arithmetic.c
FA/LR_3/2/: main.c
FA/LR_3/2/include/: vector.h
FA/LR_3/2/src/: vector.c
FA/LR_3/6/: main.c
FA/LR_3/7/: 1.txt  main.c
OOP/LR_1/: CMakeLists.txt  main.cpp
OOP/LR_1/include/: removeVowels.h
OOP/LR_1/src/: removeVowels.cpp
OOP/LR_1/test/: tests.cpp
OOP/LR_2/: CMakeLists.txt  main.cpp
OOP/LR_2/interfaces/: Octal.h
OOP/LR_2/src/: Octal.cpp
OOP/LR_2/test/: tests.cpp
OOP/LR_3/: CMakeLists.txt  main.cpp
OOP/LR_3/include/: Figure.h  FigureArray.h  Hexagon.h  Pentagon.h  Rhombus.h
OOP/LR_3/src/: Figure.cpp  FigureArray.cpp  Hexagon.cpp  Pentagon.cpp  Rhombus.cpp
OOP/LR_3/test/: tests.cpp
OOP/LR_4/: CMakeLists.txt  main.cpp
OOP/LR_4/include/: Array.h  Figure.h  Point.h  Rectangle.h  Rhombus.h  Trapezoid.h
OOP/LR_4/test/: tests.cpp
OOP/LR_5/: CMakeLists.txt  main.cpp
OOP/LR_5/include/: forward_list.h  memory_resource.h
OOP/LR_5/src/: memory_resource.cpp
OOP/LR_5/test/: tests.cpp
OOP/LR_6/: CMakeLists.txt  main.cpp
OOP/LR_6/include/: dungeon.h  factory.h  npc.h  observer.h  visitor.h
OOP/LR_6/src/: dungeon.cpp  factory.cpp  knight.cpp  npc.cpp  observer.cpp  pegasus.cpp  squirrel.cpp  visitor.cpp
OOP/LR_6/test/: tests.cpp
OOP/LR_7/: CMakeLists.txt  main.cpp
OOP/LR_7/include/: constants.h  game.h  npc.h
OOP/LR_7/src/: game.cpp  npc.cpp
OOP/LR_7/test/: tests.cpp
OS/1/: client.c  server.c
OS/2/: main.c
